--- a/assets/index.html
+++ b/assets/index.html
@@ -12,11 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav class="nav">
             <a href="./index.html" class="nav__logo">
                 <img src="./image/Property 1=Default.png" alt="Positivus">
             </a>
+            <input type="checkbox" id="burger__menu" class="menu-checkbox">
+            <label class="burger__menu" for="burger__menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
             <ul class="nav__menu">
                 <li><a href="#" class="nav__link">About us</a></li>
                 <li><a href="#" class="nav__link">Services</a></li>
@@ -26,8 +32,33 @@
                 <li><a href="#" class="nav__link nav__button">Request a quote</a></li>
             </ul>
         </nav>
-    </header>
-
+    </header> -->
     
+    <header>
+        <nav class="nav">
+            <a href="./index.html" class="nav__logo">
+                <img src="./image/Property 1=Default.png" alt="Logo">
+            </a>
+            <input type="checkbox" class="burger__menu-checkbox" id="burger__menu">
+
+            <ul class="nav__menu">
+                <label for="burger__menu" class="burger__menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <li><a href="#" class="menu__items">About Us</a></li>
+                <li><a href="#" class="menu__items">Services</a></li>
+                <li><a href="#" class="menu__items">Use Cases</a></li>
+                <li><a href="#" class="menu__items">Pricing</a></li>
+                <li><a href="#" class="menu__items">Blog</a></li>
+                <li><a href="#" class="menu__items request_quote">Request quote</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+
+
+
 </body>
 </html>
