Section some components done

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,30 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <!-- <header>
-        <nav class="nav">
-            <a href="./index.html" class="nav__logo">
-                <img src="./image/Property 1=Default.png" alt="Positivus">
-            </a>
-            <input type="checkbox" id="burger__menu" class="menu-checkbox">
-            <label class="burger__menu" for="burger__menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-            <ul class="nav__menu">
-                <li><a href="#" class="nav__link">About us</a></li>
-                <li><a href="#" class="nav__link">Services</a></li>
-                <li><a href="#" class="nav__link">Use Cases</a></li>
-                <li><a href="#" class="nav__link">Pricing</a></li>
-                <li><a href="#" class="nav__link">Blog</a></li>
-                <li><a href="#" class="nav__link nav__button">Request a quote</a></li>
-            </ul>
-        </nav>
-    </header> -->
-    
+<body>  
     <header>
+        <!-- * Navigation -->
         <nav class="nav">
             <a href="./index.html" class="nav__logo">
                 <img src="./image/Property 1=Default.png" alt="Logo">
@@ -55,10 +34,38 @@
                 <li><a href="#" class="menu__items request_quote">Request quote</a></li>
             </ul>
         </nav>
+
+        <!-- *Section for short info about us -->
+         <section class="introduction">
+                <div class="introduction__text">
+                    <div class="introduction__text__heading">
+                        <h1 class="introduction__text__heading-para">
+                            Navigating the digital landscape for success
+                        </h1>
+                    </div>
+                    <div class="introduction__text__img">
+                        <img src="./image/Illustration.png" alt="">
+                    </div>
+                    <div class="introduction__text__info">
+                        <p class="introduction__text__info-para">
+                            Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.
+                        </p>
+                    </div>
+                    <div class="introduction__text__button">
+                        <button class="introduction-btn" type="button" name="book a consultation">Book a consultation</button>
+                    </div>
+                </div>
+                <div class="introduction__img">
+                    <img src="./image/Illustration.png" alt="Illustration">
+                </div>
+         </section>
     </header>
-    
 
 
 
+
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
