Added the last section of header and edited some parts of header

--- a/assets/index.html
+++ b/assets/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#" class="menu__items request_quote">Request quote</a></li>
             </ul>
         </nav>
-
+        
         <!-- *Section for short info about us -->
          <section class="introduction">
                 <div class="introduction__text">
@@ -59,10 +59,36 @@
                     <img src="./image/Illustration.png" alt="Illustration">
                 </div>
          </section>
+
+         <!-- *Ads section -->
+         <section class="ads">
+            <div class="ads__items">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1280px-Amazon_logo.svg.png" alt="">
+            </div>
+            <div class="ads__items">
+                <img src="https://www.cdnlogo.com/logos/d/18/dribbble.svg" alt="" >
+            </div>
+            <div class="ads__items">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/HubSpot_Logo.svg/1920px-HubSpot_Logo.svg.png" alt="">
+            </div>
+            <div class="ads__items ads__notion">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Notion_app_logo.png" alt="">
+                <h3>Notion</h3>
+            </div>
+            <div class="ads__items">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="">
+            </div>
+            <div class="ads__items">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Zoom_Communications_Logo.svg/2560px-Zoom_Communications_Logo.svg.png" alt="">
+            </div>
+         </section>
     </header>
+    <!-- Header done. It has navigation and 2 sections -->
 
-
-
+    <!-- *Main -->
+    <main>
+        
+    </main>
 
 
 
