form section done

--- a/assets/index.html
+++ b/assets/index.html
@@ -51,8 +51,8 @@
                             Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.
                         </p>
                     </div>
-                    <div class="introduction__text__button">
-                        <button class="introduction-btn" type="button" name="book a consultation">Book a consultation</button>
+                    <div class="introduction__text__button btn-box">
+                        <button class="introduction-btn btn-click" type="button" name="book a consultation">Book a consultation</button>
                     </div>
                 </div>
                 <div class="introduction__img">
@@ -92,7 +92,7 @@
             <h2>Services</h2>
             <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include:</p>
         </section>
-        <div class="services-container">
+        <section class="services-container">
 
             <div class="services-container__card  card1">
                 <div class="card__text">
@@ -184,8 +184,53 @@
                     <img src="./image/Services/services6.png" alt="">
                 </div>
             </div>
-        </div>
-        
+        </section>
+        <article class="proposal">
+            <div class="proposal__text">
+                <h3 class="proposal__text-heading">Let's make things happen</h3>
+                <p class="proposal__text-para">Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</p>
+                <div class="proposal__text-btn btn-box">
+                    <button class="btn-click">Get your free proposal</button>
+                </div>
+            </div>
+            <div class="proposal__img">
+                <img src="./image/article/Frame 19.png" alt="">
+            </div>
+        </article>
+
+        <section class="contact">
+            <div class="contact__heading">
+                <h2>Contact Us</h2>
+                <p>Connect with Us: Let's Discuss Your Digital Marketing Needs</p>
+            </div>
+            <div class="contact__form">
+                <form action="">
+                    <label for="choice" id="choice-lbl">
+                        <input type="radio" name="choice" >Say Hi
+                        <input type="radio" name="choice" >Get a Quote
+                    </label>
+                    <label for="name" class="name-lbl">
+                        Name
+                        <input type="text" id="name" placeholder="Name" class="name-inp" required autocomplete="off" onfocus="this.value=''"> 
+                    </label>
+                    <label for="email">
+                        Email*
+                        <input type="email" id="email" placeholder="Email" required autocomplete="off">
+                    </label>
+                    <label for="message">
+                        Message*
+                        <textarea  id="message" placeholder="Message">
+                        </textarea>
+                    </label>
+                    <div class="btn-box">
+                        <button class="btn-click">Send Message</button>
+                    </div>
+                </form>
+                <div class="contact__form__imagine">
+                    <img src="./image/form/Illustration (1).png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
 
