fixed some problems and made header

--- a/assets/index.html
+++ b/assets/index.html
@@ -112,8 +112,8 @@
             <div class="services-container__card  card2">
                 <div class="card__text">
                     <div class="card__text-heading">
-                        <h3>Search engine</h3>
-                        <h3>optimization</h3>
+                        <h3>Pay-per-click</h3>
+                        <h3>advertising</h3>
                     </div>
                     <div class="card__text-button">
                         <img class="card__text-button__icon" src="./image/Services/icon/icon-green.png" alt="">
@@ -127,8 +127,8 @@
             <div class="services-container__card  card3">
                 <div class="card__text">
                     <div class="card__text-heading">
-                        <h3>Search engine</h3>
-                        <h3>optimization</h3>
+                        <h3>Social Media</h3>
+                        <h3>Marketting</h3>
                     </div>
                     <div class="card__text-button">
                         <img class="card__text-button__icon" src="./image/Services/icon/icon-black.png" alt="">
@@ -142,8 +142,8 @@
             <div class="services-container__card  card4">
                 <div class="card__text">
                     <div class="card__text-heading">
-                        <h3>Search engine</h3>
-                        <h3>optimization</h3>
+                        <h3>Email</h3>
+                        <h3>Marketing</h3>
                     </div>
                     <div class="card__text-button">
                         <img class="card__text-button__icon" src="./image/Services/icon/icon-green.png" alt="">
@@ -157,8 +157,8 @@
             <div class="services-container__card  card5">
                 <div class="card__text">
                     <div class="card__text-heading">
-                        <h3>Search engine</h3>
-                        <h3>optimization</h3>
+                        <h3>Content</h3>
+                        <h3>Creation</h3>
                     </div>
                     <div class="card__text-button">
                         <img class="card__text-button__icon" src="./image/Services/icon/icon-green.png" alt="">
@@ -172,8 +172,8 @@
             <div class="services-container__card  card6">
                 <div class="card__text">
                     <div class="card__text-heading">
-                        <h3>Search engine</h3>
-                        <h3>optimization</h3>
+                        <h3>Analytics and</h3>
+                        <h3>Tracking</h3>
                     </div>
                     <div class="card__text-button">
                         <img class="card__text-button__icon" src="./image/Services/icon/icon-black.png" alt="">
@@ -232,7 +232,46 @@
             </div>
         </section>
     </main>
-
+    <footer>
+        <div class="footer__nav">
+            <div class="footer__nav__logo">
+                <img src="./image/footer/Vector.png" alt="icon">
+                <h3>Positivus</h3>
+            </div>
+            <ul class="footer__nav__menu">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Use Cases</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+            <div class="footer__nav__media">
+                <a href="#"><img src="./image/footer/Social icon.png" alt=""></a>
+                <a href="#"><img src="./image/footer/Social icon (1).png" alt=""></a>
+                <a href="#"><img src="./image/footer/Social icon (2).png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer__contact">
+            <div class="footer__contact__data">
+                <h3>Contact us:</h3>
+                <p>Email: info@positivus.com</p>
+                <p>Phone: 555-555-55-5555</p>
+                <address>
+                    <span>Address: 0123 Main st</span>
+                    <span>Lorem City, Center State 01234</span>
+                </address>
+            </div>
+            <div class="footer__contact__subscribe">
+                <input type="email" placeholder="Email">
+                <button>Subscribe to news</button>
+            </div>
+        </div>
+        <hr>
+        <div class="footer__bottom">
+            <p>	&#9400 2023 Positivus. All Rights Reserved.</p>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </footer>
 
 
     <script src="./script.js"></script>
